# crypto-primitives

./: README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: download_wordlist.py
src/crypto_primitives/: __init__.py  bip32.py  bip39.py  bip44.py  eip2098.py  eip55.py  eip712.py
src/crypto_primitives/utils/: __init__.py  base58.py  hmac_utils.py
src/crypto_primitives/wordlist/: __init__.py
tests/: test_bip32.py  test_bip39.py  test_bip44.py  test_eip2098.py  test_eip55.py  test_eip712.py
