[project]
name = "crypto-primitives"
version = "0.1.0"
description = "Python implementations of BIP/EIP standards"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
